Refactor db-doctor for JDK 8