@@ -2,7 +2,8 @@ package com.dbdoctor;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -10,7 +11,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class IpWhitelistTest {
     @Test
     void supportsExactAndIpv4CidrEntries() {
-        IpWhitelist whitelist = new IpWhitelist(List.of("127.0.0.1", "10.0.0.0/24"));
+        IpWhitelist whitelist = new IpWhitelist(Arrays.asList("127.0.0.1", "10.0.0.0/24"));
 
         assertTrue(whitelist.contains("127.0.0.1"));
         assertTrue(whitelist.contains("10.0.0.15"));
@@ -19,7 +20,7 @@ class IpWhitelistTest {
 
     @Test
     void treatsNullClientAddressAsLocalAllowed() {
-        IpWhitelist whitelist = new IpWhitelist(List.of());
+        IpWhitelist whitelist = new IpWhitelist(Collections.emptyList());
         assertTrue(whitelist.contains(null));
         assertTrue(whitelist.contains("local"));
     }
